recursion.lessons.recursion.tree.Tree.scala.error
Tree:7: error: not found: value curent
    	curent(steps);avance(length);x=getX();y=getY();droite(angle);tree(steps-1 , shrink*length , angle, shrink);
        ^