recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
    var x=0.0; var y=0.0;
    if (steps==0) {
    return
    }else {
    	curent(steps);avance(length);x=getX();y=getY();droite(angle);tree(steps-1 , shrink*length , angle, shrink);
    	gauche(2*angle);tree(steps-1 , shrink*length , angle, shrink);setPos(x,y);
    }
}
